connectors/force-app/main/scratch/objects/User/fields/Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Category__c</fullName>
    <formula>
IF(Title = &#39;Account Executive&#39;,&#39;Sales Executive&#39;,
IF(Title = &#39;Sales Executive&#39;,&#39;Sales Executive&#39;,
IF(Title = &#39;Chief Executive Officer&#39;,&#39;CEO&#39;,
IF(Title = &#39;CEO&#39;,&#39;CEO&#39;,
IF(Title = &#39;Chief Information Officer&#39;,&#39;CIO&#39;,
IF(Title = &#39;CIO&#39;,&#39;CIO&#39;,
IF(Title = &#39;Customer Service Agent&#39;,&#39;Customer Service&#39;,
IF(Title = &#39;Customer Service Representative&#39;,&#39;Customer Service&#39;,
IF(Title = &#39;Customer Support Rep&#39;,&#39;Customer Service&#39;,
IF(Title = &#39;Customer Service Representative&#39;,&#39;Customer Service&#39;,
IF(Title = &#39;Director&#39;,&#39;Director&#39;,
IF(Title = &#39;Senior Director &#39;,&#39;Director&#39;,
IF(Title = &#39;EVP&#39;,&#39;EVP&#39;,
IF(Title = &#39;Technician&#39;,&#39;Specialist&#39;,
IF(Title = &#39;Associate Technician&#39;,&#39;Specialist&#39;,
IF(Title = &#39;Specialist&#39;,&#39;Specialist&#39;,
IF(Title = &#39;Sales Manager&#39;,&#39;Manager&#39;,
IF(Title = &#39;Sales Representative&#39;,&#39;Manager&#39;,
IF(Title = &#39;Manager&#39;,&#39;Manager&#39;,
IF(Title = &#39;Channel Sales Representative&#39;,&#39;Manager&#39;,
IF(Title = &#39;Senior Vice President&#39;,&#39;VP&#39;,
IF(Title = &#39;SVP&#39;,&#39;VP&#39;,
IF(Title = &#39;Team Lead&#39;,&#39;Manger&#39;,
IF(Title = &#39;VP&#39;,&#39;VP&#39;,
 &#39;Other&#39;)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Category</label>
    <type>Text</type>
</CustomField>