connectors/force-app/main/scratch/objects/User/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenure</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>